:revolving_hearts: be firends :pray:

--- a/src/style/mixin.less
+++ b/src/style/mixin.less
@@ -2,3 +2,9 @@
 
 @color_tit: #2b333b;
 @color_desc: #b7bbbf;
+
+
+// 渐变
+.gradient(@start, @end) {
+  background: linear-gradient(@start, @end);
+}
