:four_leaf_clover: :grin:

--- a/src/style/base.less
+++ b/src/style/base.less
@@ -13,9 +13,9 @@
 }
 
 .content_full {
-  bottom: 0;
-  z-index: 100;
-  background: #fff;
+  // bottom: 0;
+  // z-index: 100;
+  // background: #fff;
 }
 
 .image {
