:revolving_hearts: :bowtie: :relaxed:

--- a/src/style/base.less
+++ b/src/style/base.less
@@ -7,7 +7,7 @@
   left: 0;
   bottom: 52px;
   width: 100%;
-  overflow: auto;
+  overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   overflow-scrolling: touch;
 }
@@ -16,9 +16,6 @@
   bottom: 0;
   z-index: 100;
   background: #fff;
-  overflow: auto;
-  -webkit-overflow-scrolling: touch;
-  overflow-scrolling: touch;
 }
 
 .image {
