--- a/src/style/base.less
+++ b/src/style/base.less
@@ -1,9 +1,17 @@
 @charset "UTF-8";
 @import "mixin";
 
-.content{
+body,
+html {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+}
+
+.content {
   position: absolute;
-  top:0;
+  top: 0;
   left: 0;
   bottom: 52px;
   width: 100%;
