--- a/src/style/base.less
+++ b/src/style/base.less
@@ -6,7 +6,8 @@ html {
   position: relative;
   width: 100%;
   height: 100%;
-  box-sizing: border-box;
+  overflow: hidden;
+  -webkit-overflow-scrolling: touch;
 }
 
 .content {
